# render-engine-tui

./: CLAUDE.md  CONTENT_MANAGER_ARCHITECTURE.md  DYNAMIC_COLLECTIONS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_EXAMPLE.md  README.md  RENDER_ENGINE_INTEGRATION.md  collections.yaml  debug_page_content.py  justfile  pyproject.toml
content_editor/: main.py  ui.py  version.py
content_editor_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: DYNAMIC_LOADING_QUICKSTART.md
render-engine-tui/: _version.py  collections_config.py  config.py  ui.py
render_engine_tui/: _version.py  collections_config.py  db.py  main.py  render_engine_integration.py  site_loader.py  ui.py
tests/: demo_dynamic_loading.py  test_dynamic_loading.py  test_site_loader.py
