[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "render_engine_tui/_version.py"

[project]
name = "render-engine-tui"
dynamic = ["version"]
description = "TUI for editing blog content stored in PostgreSQL"
requires-python = ">=3.11"
dependencies = [
  "textual>=1.0.0",
  "psycopg[binary]>=3.0.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0.0",
  "python-frontmatter>=1.0.0",
]

[project.scripts]
render-engine-tui = "render_engine_tui.main:run"
