[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "render_engine_tui/_version.py"

[project]
name = "render-engine-tui"
dynamic = ["version"]
description = "TUI for browsing and creating blog content via render-engine ContentManager backends"
requires-python = ">=3.11"
dependencies = [
  "textual>=1.0.0",
  "python-frontmatter>=1.0.0",
]

[project.scripts]
render-engine-tui = "render_engine_tui.main:run"
